--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 	font-family: Arial, sans-serif; 
 	background-color: rgb(39, 39, 39);
 	margin: 0;
-	background: url("Images/Accueil.JPG") no-repeat fixed center;
+	background: url("Images/Accueil.JPG") repeat fixed center;
 }
 
 
@@ -14,15 +14,21 @@ header {
 
 	float: left;
 	width: 20%;
-	height: 150em;
+	height: 160em;
 	color: white;
-	background: linear-gradient(to bottom, rgb(0, 88, 255), rgb(51, 204, 255));
+	background-color: rgb(0, 130, 200);
+	background: linear-gradient(to bottom, rgb(0, 42, 255), rgb(51, 156, 255));
 	box-shadow: 5px 5px 20px black;
 
 }
 
 
 /*---Code concernant le slider----*/
+
+#sliderReseauxHoverHeader {
+
+	display: none;
+}
 
 #sliderReseaux {
 
@@ -59,8 +65,18 @@ header {
 
 /*-----Ajustement de la photo----*/
 
+#florianHoverHeader {
+
+	display: none;
+}
 
 #florian {
+
+	background-color: grey;
+	width: 100%;
+}
+
+#florian img{
 
 	width: 100%;
 }
@@ -77,7 +93,7 @@ header {
 
 /*-----Mise en forme du texte de présentation------*/
 
-#presentation p{ 
+#textePresentation p{ 
 
 	text-align: justify;
 	margin:10%;
@@ -86,16 +102,6 @@ header {
 	font-size: 1.1em;
 
 }
-
-/*-----Séparation du texte de présentation et des infos par une bordure------*/
-
-#presentation {
-
-	margin-bottom: 15%;
-	border-bottom: 1px solid rgb(0, 100, 200);
-}
-
-
 
 /*----Mise en forme et placement des logo(gsm, enveloppe, maison,...)----*/
 
@@ -111,7 +117,7 @@ header {
 .info {
 
 	margin-bottom: 15%;
-	border-bottom: 1px solid rgb(0, 100, 200);
+	border-bottom: 1px solid rgb(0, 46, 200);
 	
 }
 
@@ -181,7 +187,7 @@ h4 {
 
 #bordureMail {
 
-	border-bottom: 1px solid rgb(0, 100, 200);
+	border-bottom: 1px solid rgb(0, 46, 200);
 }
 
 #competences h3 {
@@ -216,6 +222,13 @@ h4 {
 	width: 50%;
 	margin-top: 10%;
 	margin-left: 25%;
+}
+
+#iconesCompMobileUnity img{
+
+	width: 25%;
+	margin-top: 10%;
+	margin-left: 15%;
 }
 
 
@@ -287,7 +300,7 @@ h5 {
 
 #cvBouton a:hover {
 
-	background:rgb(0, 153, 255);
+	background:rgb(0, 88, 200);
 	padding: 2%;
 	transition: 1s;
 }
@@ -417,19 +430,21 @@ h5 {
 
 .elements {
 
+	display: table;
 	width: 28%;
 	text-align: center;
 	border: solid 2px black;
-	margin-bottom: 2%;
-	background-color: rgb(51, 204, 255);
+	margin: 0 0 2vw 0; /*Avec le VW, Firefox prend bien en compte les margin verticales, si je laisse tout en %, il y a certains bug*/
+	background-color: rgb(51, 156, 255);
 	line-height: 1.4em;
-	transition: 1s;
+	transition: 0.5s;
 }
 
 .elements:hover {
 
 	background-color: rgb(0, 100, 200);
-	padding: 0% 5% 10% 5%;
+	padding: 0% 5% 15% 5%;
+	transition: 0.5s;
 }
 
 /*!!!!!!!!!!Code commun relatif aux sections!!!!!!!!!!!*/
@@ -462,9 +477,102 @@ h5 {
 	margin-left: 25%;
 	margin-right: 5%;
 	padding-bottom: 1%;
-	box-shadow: 5px 5px 20px black;
+	box-shadow: 5px 5px 50px black;
 }
 
 
 /*!!!!!!MEDIA QUERIES!!!!!!!!!!*/
 
+
+@media screen and (max-width: 1400px) {
+
+/*-----Placement de mes icones au dessus des informations et "centrages des infos"(Sinon les adresses mails dépassent du header en dessous de 1400px)------*/
+
+	.logo img {
+
+		float: none;
+		display: block;
+		margin: 0 auto;
+		margin-bottom: 5%;
+
+	}
+
+	.info {
+
+		margin-bottom: 10%;
+	}
+
+	.info p {
+
+		text-align: center;
+		margin: 0 auto;
+	}
+
+	#textePresentation p {
+
+		text-align: center;
+	}
+
+	#bordureMail {
+
+		margin-bottom: 10%;
+	}
+
+	#competences h3 {
+
+		text-align: center;
+		margin: 0 auto;
+		margin-bottom: 10%;
+	}
+
+	#mail {
+
+		text-align: center;
+		margin: 0 auto;
+	}
+
+	#mail p {
+
+		text-align: center;
+		margin: auto;
+		margin-bottom: 10%;
+
+	}
+
+}
+
+@media screen and (max-width: 1220px) {
+
+	header {
+
+		float: none;
+		margin-top: 10%;
+		width: 100%;
+	}
+
+	#florian {
+
+		display: none;
+	}
+
+	/*---Placements des éléments nécessaires au dessus du header------*/
+
+	#florianHoverHeader {
+
+		display: block;
+		width: 20%;
+		margin: auto;
+		margin-top: 10%;
+	}
+
+	#florianHoverHeader img {
+
+		width: 100%;
+		border-radius: 50%;
+	}
+
+	#sliderReseauxHoverHeader {
+
+	display: block;
+	}
+}
