--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
 
+html {
+
+	display: flex;
+	width: 100%;
+	height: 100%;
+}
+
 body {
 
 	font-family: Arial, sans-serif; 
@@ -34,13 +41,14 @@ header {
 
 	position: absolute;
 	width: 20%;
-	margin-top: -1%;
+	margin-top: -4%;
 }
 
 #sliderReseaux ul {
 
 	list-style-type: none;
 	display: none;
+
 }
 
 #sliderReseaux ul li {
@@ -398,6 +406,13 @@ h5 {
 	margin-right: 55%;
 }
 
+#imageCoraResponsive {
+
+	display: none;
+}
+
+/*-----Avec une seule expérience pro, je retire la bordure inférieure-----*/
+
 #cora {
 
 	border: 0;
@@ -489,6 +504,7 @@ h5 {
 	margin-right: 5%;
 	padding-bottom: 1%;
 	box-shadow: 5px 5px 50px black;
+	border-radius: 5%;
 }
 
 
@@ -560,12 +576,19 @@ h5 {
 
 @media screen and (max-width: 1220px) {
 
+
+	body {
+
+		margin: 2%;
+	}
+
 	header {
 
 		float: none;
 		margin-top: 10%;
 		width: 100%;
 		height: auto;
+		border-radius: 5%;
 	}
 
 	#florian {
@@ -771,6 +794,7 @@ h5 {
 		width: 100%;
 		margin: 0;
 		margin-top: 5%;
+
 	}
 
 	.imageSections {
@@ -793,6 +817,8 @@ h5 {
 		text-align: center;
 	}
 
+	/*-----Expériences professionnelles-----*/
+
 	.etudesExp {
 
 		text-align: center;
@@ -803,8 +829,54 @@ h5 {
 		display: none;
 	}
 
+	#imageCoraResponsive {
+
+		display: block;
+		margin: 0 auto;
+		margin-top: 2%;
+		width: 10%;
+		
+	}
+
+	/*-----Positionnement du contenu e ma section "Langues"------*/
+
+	#langues {
+
+		text-align: center;
+	}
+
+	#langues img {
+
+		display: block;
+		float: none;
+		margin: 0 auto;
+	}
+
+	#langues h3 {
+
+		display: none;
+	}
+
+	#langues p {
+
+		font-size: 1.3em;
+		font-weight: bold;
+
+	}
 
 
+	/*-----Projets----*/
+
+	#sectionProjet {
+
+		margin-bottom: 5%;
+	}
+
+	#projets {
+
+		display: flex;
+		margin-left: 0;
+	}
 
 
 }
