--- a/style.css
+++ b/style.css
@@ -462,28 +462,35 @@ h5 {
 	margin: 0 0 2vw 0; /*Avec le VW, Firefox prend bien en compte les margin verticales, si je laisse tout en %, il y a certains bug*/
 	background-color: rgb(51, 156, 255);
 	line-height: 1.4em;
-	transition: 0.5s;
+	height: 100px;
+	padding: 0;
+	transition: 2s;
 }
 
 .elementsProjet h2, p {
 
 	text-align: center;
+}
 
+.elementsProjet p {
+
+	color: rgb(216, 189, 61);
+	font-size: 1.3em;
 }
 
 .elementsProjet:hover {
 
 	background-color: rgb(0, 100, 200);
-	padding: 0% 5% 5% 5%;
-	transition: 0.5s;
+	padding: 0% 5% 2% 5%;
+	height: 250px;
+	transition: 1s;
 }
 
 /*-----Ajout d'une description de mes projets------*/
 
 .descriptionProjet {
 
-	
-
+	display: none;
 }
 
 .descriptionProjet img {
@@ -495,15 +502,15 @@ h5 {
 .descriptionProjet p {
 
 	text-align: left;
+	color: black;
 	margin-left: 50%;
-	margin-right: 5%;
+	font-size: 1em;
 }
 
 .liensProjets img {
 
 	width: 10%;
 	margin-right: 5%;
-	margin-bottom: 1%; 
 	margin-left: 5%;
 	float: left;
 
@@ -547,7 +554,6 @@ h5 {
 	margin-right: 5%;
 	padding-bottom: 1%;
 	box-shadow: 5px 5px 50px black;
-	border-radius: 5%;
 }
 
 
@@ -631,7 +637,6 @@ h5 {
 		margin-top: 10%;
 		width: 100%;
 		height: auto;
-		border-radius: 5%;
 	}
 
 	#florian {
@@ -920,6 +925,119 @@ h5 {
 		display: flex;
 		margin-left: 0;
 	}
-
-
 }
+
+@media screen and (max-width: 700px) {
+
+
+
+	#florianHoverHeader {
+
+		width: 40%;
+		border-radius: 50%;
+		margin-bottom: 5%;
+	}
+
+	#nomPrenomHoverHeader h1 {
+
+		margin-bottom: 5%;
+	}
+
+	#sliderReseauxHoverHeader img {
+
+		width: 10%;
+	}
+
+	#cvBoutonHoverHeader {
+
+		margin-bottom: 20%;
+	}
+
+	#cvBoutonHoverHeader a {
+
+		padding: 5%;
+	}
+
+	#iconePresentation img{
+
+		width: 15%;
+	}
+
+	#textePresentation p {
+
+		line-height: 1.5em;
+		margin-bottom: 10%;
+	}
+
+	.logo img {
+
+		width: 15%;
+		margin-top: 5%;
+		margin-bottom: 5%;
+	}
+
+	#iconesCompWeb {
+
+		width: 100%;
+	}
+
+	#iconesCompProg {
+
+		width: 100%;
+	}
+
+	#iconesCompBD {
+
+		width: 100%;
+	}
+
+	#iconesCompMobileUnity {
+
+		width: 100%;
+		padding-bottom: 10%;
+	}
+
+	.imageSections {
+
+		width: 20%;
+	}
+
+	.titreSections {
+
+		margin-top: 5%;
+		font-size: 2.2em;
+	}
+
+	.etudesExp h3{
+
+		font-size: 1.2em;
+		margin-top: 10%;
+		margin-bottom: 5%;
+	}
+
+	.etudesExp span {
+
+		margin
+	}
+
+	#imageCoraResponsive {
+
+		width: 30%;
+		margin-top: 5%;
+	}
+
+	.elementsProjet {
+
+		width: 90%;
+		margin-bottom: 10%;
+	}
+
+	.elementsProjet:hover{
+
+		padding: 0;
+		padding-bottom: 5%;
+	}
+}
+
+
+
