--- a/style.css
+++ b/style.css
@@ -621,7 +621,6 @@ h5 {
 /*-----Changement du design pour un meilleur accès sur mobile-----*/
 @media screen and (max-width: 1000px) {
 
-
 	body {
 
 		margin: 2%;
@@ -1040,7 +1039,7 @@ h5 {
 	.elementsProjet {
 
 		width: 90%;
-		margin-bottom: 10%;
+		margin: 0 0 4vw 0;
 	}
 
 	.elementsProjet:hover{
