--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 body {
 
 	font-family: Arial, sans-serif; 
-	background: url("Images/accueil.jpg");
-	background-repeat: no-repeat;
+	background: url("Images/accueil.png");
+	background-repeat: repeat;
 	background-position: cover;
 	background-attachment: fixed;
 	margin: 0;
@@ -470,6 +470,8 @@ h5 {
 	font-size: 1.3em;
 }
 
+
+/*------Transition CSS au survol-----*/
 .elementsProjet:hover {
 
 	background-color: rgb(0, 100, 200);
@@ -478,7 +480,7 @@ h5 {
 	transition: 1s;
 }
 
-/*-----Ajout d'une description de mes projets------*/
+/*-----Ajout d'une description de mes projets lors du survol------*/
 
 .descriptionProjet {
 
